# Vango7

./: .gitignore  CMakeLists.txt  PacketTypes.json  README.md  TODO.txt  partitions.csv  sdkconfig  sdkconfig.old  ui_events.txt
components/freemodbus/freemodbus/common/include/: esp_modbus_master.h
components/hexnet/: CMakeLists.txt  component.mk  upload_script.html
components/hexnet/inc/: hexnet_bluetooth.h  hexnet_canbus.h  hexnet_nvs.h  hexnet_wifi.h
components/hexnet/src/: hexnet_bluetooth.c  hexnet_canbus.c  hexnet_nvs.c  hexnet_wifi.c
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
components/lvgl__lvgl/src/extra/libs/rlottie/: lv_rlottie.c
components/ui_files/: ui.c  ui.h  ui_comp_hook.c  ui_events.h  ui_img_1542361832.c  ui_img_ac_png.c  ui_img_btconnected_png.c  ui_img_btnotconnected_png.c  ui_img_caravan_logo_png.c  ui_img_connectionimg_png.c  ui_img_heater_png.c  ui_img_initlogo_png.c  ui_img_lamp_png.c  ui_img_logo3_png.c  ui_img_outlet_png.c  ui_img_oven_png.c  ui_img_panelsettingimg_png.c  ui_img_readinglamp_png.c  ui_img_refrigerator_png.c  ui_img_sconnected_png.c  ui_img_snotconnected_png.c  ui_img_themeimg_png.c  ui_img_toilet_png.c  ui_img_tv_png.c  ui_img_usb_png.c  ui_img_water_png.c  ui_img_weatherforecast2_png.c  ui_img_wifi3_png.c  ui_scrConnectionSettings.c  ui_scrInit.c  ui_scrMain.c  ui_scrPanelSettings.c  ui_scrRGB.c  ui_scrRules.c  ui_scrSettings.c  ui_scrTheme.c  ui_scrWallpaper.c
main/: CMakeLists.txt  data_manager.c  data_manager.h  definitions.h  display_manager.c  display_manager.h  main.c
