
idf_component_register(SRCS 
"../components/ui_files/ui_scrWallpaper.c"
"../components/ui_files/ui_scrTheme.c"
"../components/ui_files/ui_scrSettings.c"
"../components/ui_files/ui_scrRules.c"
"../components/ui_files/ui_scrRGB.c"
"../components/ui_files/ui_scrPanelSettings.c"
"../components/ui_files/ui_scrMain.c"
"../components/ui_files/ui_scrInit.c"
"../components/ui_files/ui_scrConnectionSettings.c"
"../components/ui_files/ui_img_wifi3_png.c"
"../components/ui_files/ui_img_weatherforecast2_png.c"
"../components/ui_files/ui_img_water_png.c"
"../components/ui_files/ui_img_usb_png.c"
"../components/ui_files/ui_img_tv_png.c"
"../components/ui_files/ui_img_toilet_png.c"
"../components/ui_files/ui_img_themeimg_png.c"
"../components/ui_files/ui_img_snotconnected_png.c"
"../components/ui_files/ui_img_sconnected_png.c"
"../components/ui_files/ui_img_refrigerator_png.c"
"../components/ui_files/ui_img_readinglamp_png.c"
"../components/ui_files/ui_img_panelsettingimg_png.c"
"../components/ui_files/ui_img_oven_png.c"
"../components/ui_files/ui_img_outlet_png.c"
"../components/ui_files/ui_img_logo3_png.c"
"../components/ui_files/ui_img_lamp_png.c"
"../components/ui_files/ui_img_initlogo_png.c"
"../components/ui_files/ui_img_heater_png.c"
"../components/ui_files/ui_img_connectionimg_png.c"
"../components/ui_files/ui_img_caravan_logo_png.c"
"../components/ui_files/ui_img_btnotconnected_png.c"
"../components/ui_files/ui_img_btconnected_png.c"
"../components/ui_files/ui_img_ac_png.c"
"../components/ui_files/ui_img_1542361832.c"
"../components/ui_files/ui_helpers.c"
"../components/ui_files/ui_events.c"
"../components/ui_files/ui_comp_hook.c"
"main.c" 
"lvgl_demo_ui.c"
"display_manager.c"
"data_manager.c"
"../components/ui_files/ui.c"

    INCLUDE_DIRS 
    "."
    "../components/ui_files"
    "../components/freemodbus/freemodbus/common/include"
    
)
